--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django==2.0.3
 django-authentication==0.1.5
 django-braces==1.0.0
 django-extensions==1.1.1
-mysql-connector==2.1.6
+getMysqlConnPara==2.0.0
+mysql-connector-python==8.0.6
 mysql-connector-python-rf==2.2.2
 mysqlclient==1.3.12
 PyMySQL==0.8.0
