--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ Django==2.0.3
 django-authentication==0.1.5
 django-braces==1.0.0
 django-extensions==1.1.1
+django-localflavor==2.0
+django-localflavor-us==1.1
 django-widget-tweaks==1.4.2
 getMysqlConnPara==2.0.0
 idna==2.6
@@ -42,6 +44,7 @@ pyparsing==2.2.0
 pyserial==3.4
 PySocks==1.6.8
 python-dateutil==2.7.0
+python3-memcached==1.51
 pytz==2018.3
 requests==2.18.4
 ROPGadget==5.4
