Connecting to Google Cloud

--- a/Store/Model/config.ini
+++ b/Store/Model/config.ini
@@ -1,5 +1,5 @@
 [mysql]
-host = www.berkstresser.org
+host = 35.226.123.113
 database = gelliott
-user = gelliottapp
-password = gelliott
+user = root
+password = running247
